--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -48,7 +48,7 @@ section{
     text-align: center;
     margin: 30px 0 60px 0;
 }
-.headline h1 span{ color: rgb(223, 123, 30); text-decoration: underline; text-decoration-color: black; text-underline-offset: 4px;}
+.headline h1 span{ color: rgb(241, 151, 32); text-decoration: underline; text-decoration-color: black; text-underline-offset: 4px;}
 .whats_the_catch{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -80,7 +80,7 @@ section{
     grid-area: btn;
     font-size: 18px;
     border: none;
-    background-color: rgb(223, 123, 30);
+    background-color: rgb(241, 151, 32);
     border-radius: 4px;
     padding: 8px;
     font-weight: bold;
@@ -94,7 +94,7 @@ section{
 }
 .redeem_btn:hover{
     background-color: black;
-    color: rgb(223, 123, 30);
+    color: rgb(241, 151, 32);
     cursor: pointer;
 }
 .catch_list{
@@ -119,7 +119,7 @@ section{
 .de-que-es{
     display: grid;
     gap: 20px;
-    border: solid rgb(223, 123, 30) 2px;
+    border: solid rgb(241, 151, 32);
     border-radius: 12px;
     padding: 20px;
     margin-bottom: 20px;
@@ -144,7 +144,7 @@ section{
     margin-bottom: 60px;
 }
 .text-atag{
-    color: rgb(223, 123, 30);
+    color: rgb(241, 151, 32);
 }
 
 .title-wrapper{
